# adventures.github.io

./: .gitattributes  .gitignore  README.md  _config.yml  apertures_confirmed.json  pyproject.toml
docs/: 140823.willow.springs.steve.html  140827.lake.sonoma.steve.html  141124.lake.sonoma.steve.html  150416.OR 48 inch Texas part one.html  150416.OR 48 inch Texas part three.html  150416.OR 48 inch Texas part two.html  150613 OR June at Deep Sky Ranch II.htm  150615.OR Observing in June on the Modoc Plateau Part I.html  150616.OR Observing in June on the Modoc Plateau Part II.html  150616.OR Observing in June on the Modoc Plateau Part III.html  160101.OR Ringing in the New Year with some deep sky observing.html  160531.OR Saying farewell to spring galaxies.html  160604.OR A Three Mark Night at Willow Springs 160604.html  1807.gssp.htm  2023.McArthur.htm  404.html  A couple of nights with Fritz Zwicky.htm  A super-night on 4.15.21.htm  Abell.PN.xls  Adventures in the White Mountains (Part I).html  Adventures in the White Mountains (Part II).html  Arp.Catalogue.xls  Beautiful Night for Abell Planetary and Palomar Globular hunting.html  Blazers, Seyferts, Double Rings and more.htm  CNAME  CalStar.2013.1.htm  CalStar.2013.2.htm  DeepMap600.md  DeepMap600_DeepSkyObjects.obs  Dissecting the Veil Nebula.html  Draculas_Chivito.md  Fall Galaxies through a 48-inch.htm  Fall observing with the 48-inch.htm  First Light At Tranquility Base.htm  GMT discoveries.md  GSSP_2007.html  GSSP_2007.md  GSSP_Challenge_List.md  GSSP_General_Obs_List.html  Galaxies both near and far.htm  (+354 more)
(+238 files in other folders)
